[package]
name = "communication"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }  # Active le support JSON si nécessaire
tokio = { version = "1", features = ["full"] }      # Nécessaire pour les appels asynchrones
serde = "1.0"
serde_derive = "1.0"  # Cette ligne permet d'utiliser la fonctionnalité #[derive(Deserialize)]
serde_json = "1.0"     # Si tu utilises serde pour sérialiser/désérialiser du JSON
